fixing contact page

--- a/contactpage.html
+++ b/contactpage.html
@@ -4,7 +4,7 @@
   <div class="container">
     
     <head>
-      <title>AppName?????</title>
+      <title>Dev-Libs</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <link rel="stylesheet" href="css/contactpage.css" />
@@ -20,8 +20,8 @@
     <div class="container">  
       <form id="contact" method="POST" data-netlify="true">
       <form id="contact" action="" method="post">
-      <h3>Plant Team Contact</h3>
-      <h4>Contact us for custom quote</h4>
+      <h3>Dev Libs Team Contact</h3>
+      <h4>Contact us</h4>
       <fieldset>
         <input placeholder="Your name" type="text" tabindex="1" required autofocus>
       </fieldset>
