--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">SignUp</a></li>
                 <li><a href="#">Mission</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Get in touch</a></li>
+                <li><a href="contactpage.html">Get in touch</a></li>
               </ul>
             </nav>
           </div>
