--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <ul>
                 <li><a href="#">Login</a></li>
                 <li><a href="#">SignUp</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="team.html">About Us</a></li>
                 <li><a href="contactpage.html">Get in touch</a></li>
               </ul>
             </nav>
