fixing tommy photo

--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
               <h1>Ryan Smith</h1>
             </div>
             <div class="person">
-              <img src= "https://avatars3.githubusercontent.com/u/56052655?s=96&v=4">
+              <img src= "https://ca.slack-edge.com/T4JUEB3ME-UNJSPUQP7-9b2e6d103fdc-48">
               <h1>Tommy Conner</h1>
             </div>
             <!-- <div class="person">
