--- a/team.html
+++ b/team.html
@@ -55,8 +55,8 @@
               <h1>Tommy Conner</h1>
             </div>
             <!-- <div class="person">
-              <img src ="https://avatars3.githubusercontent.com/u/51763199?s=400&v=4">
-              <h1>Nick</h1>
+              <img src ="#">
+              <h1>placeholder</h1>
             </div> -->
           </div>
         <div class ="title">
