--- a/team.html
+++ b/team.html
@@ -14,10 +14,10 @@
   <div class="container">
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="">Mission</a>
-      <a href="">About Us</a>
-      <a href="">Sign Up</a>
-      <a href="">Contact</a>
+      <a href="#">Mission</a>
+      <a href="#">About Us</a>
+      <a href="#">Sign Up</a>
+      <a href="#">Contact</a>
     </div>
     <div class="home-container">
         <header>
