--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <div class="inner">
             <nav>
               <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">SignUp</a></li>
+                <li><a href="https://frontend-j59728fja.now.sh/">Login</a></li>
+                <li><a href="https://frontend-j59728fja.now.sh/register">SignUp</a></li>
                 <li><a href="team.html">About Us</a></li>
                 <li><a href="contactpage.html">Get in touch</a></li>
               </ul>
