--- a/team.html
+++ b/team.html
@@ -14,10 +14,9 @@
   <div class="container">
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="#">Mission</a>
       <a href="#">About Us</a>
-      <a href="#">Sign Up</a>
-      <a href="#">Contact</a>
+      <a href="https://frontend-j59728fja.now.sh/">Sign Up</a>
+      <a href="contactpage.html">Contact</a>
     </div>
     <div class="home-container">
         <header>
@@ -40,7 +39,7 @@
                 <p>Ryan Smith</p>
               </div>
             <div class="team2-content">
-                <img src="https://ca.slack-edge.com/T4JUEB3ME-UNJSPUQP7-9b2e6d103fdc-48"></img>
+                <img src="https://ca.slack-edge.com/T4JUEB3ME-UNJSPUQP7-9b2e6d103fdc-512"></img>
                 <p>Tommy Conner</p>
               </div>
             </div>
