--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
  
   <div class="container">
     <div class="navbar">
-      <a href="">Home</a>
-      <a href="">Mission</a>
+      <a href="#">Home</a>
       <a href="team.html">About Us</a>
-      <a href="">Sign Up</a>
-      <a href="">Contact</a>
+      <a href="https://frontend-j59728fja.now.sh/">Sign Up</a>
+      <a href="contactpage.html">Contact</a>
     </div>
     <div class="home-container">
         <header>
             <h1>Dev-Libs</h1>
-            <h2>Lorem Ipsum etc</h2>
+            <h2>Introducing the app to keep your brain stimulated!</h2>
           </header>
         <div class="home-box">
    
@@ -33,7 +32,7 @@
 
     <div class="home">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis lectus eu diam hendrerit varius. Mauris ac dui mi. Donec facilisis gravida tristique. Donec porttitor quam augue, a consequat odio tincidunt at. Fusce finibus placerat erat id eleifend. Praesent blandit ullamcorper tortor, vitae ullamcorper leo maximus vel. Sed elit augue, facilisis et arcu at, placerat mattis lorem. Curabitur in quam diam. Praesent sed nisi quis libero ultrices dignissim non ut magna. Pellentesque non sapien vel mi rhoncus euismod. Etiam euismod vel lorem ut mattis.  
+           Are you stressed out and need a break from work? Try out Dev-Libs, our MadLibs app for developers!
         </p>
     </div>
         </div>
@@ -44,7 +43,7 @@
 
     <div class="home">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis lectus eu diam hendrerit varius. Mauris ac dui mi. Donec facilisis gravida tristique. Donec porttitor quam augue, a consequat odio tincidunt at. Fusce finibus placerat erat id eleifend. Praesent blandit ullamcorper tortor, vitae ullamcorper leo maximus vel. Sed elit augue, facilisis et arcu at, placerat mattis lorem. Curabitur in quam diam. Praesent sed nisi quis libero ultrices dignissim non ut magna. Pellentesque non sapien vel mi rhoncus euismod. Etiam euismod vel lorem ut mattis.  
+          Looking for something to pass the time or on your lunch break and want something mentally stimulating?
         </p>
     </div>
         </div>
@@ -54,7 +53,7 @@
     </div>
     <div class="home">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis lectus eu diam hendrerit varius. Mauris ac dui mi. Donec facilisis gravida tristique. Donec porttitor quam augue, a consequat odio tincidunt at. Fusce finibus placerat erat id eleifend. Praesent blandit ullamcorper tortor, vitae ullamcorper leo maximus vel. Sed elit augue, facilisis et arcu at, placerat mattis lorem. Curabitur in quam diam. Praesent sed nisi quis libero ultrices dignissim non ut magna. Pellentesque non sapien vel mi rhoncus euismod. Etiam euismod vel lorem ut mattis.  
+           Sign up to start playing!!
             <br><br>
             <button class="play">Play Dev-Libs</button></p> 
      
