wrapping up more

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>
            Sign up to start playing!!
             <br><br>
-            <button class="play">Play Dev-Libs</button></p> 
+            <button class="play"><a href="https://frontend-j59728fja.now.sh/">Play Dev-Libs</a></button></p> 
      
           
     </div>
