done except color scheme

--- a/team.html
+++ b/team.html
@@ -5,66 +5,86 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="css/index.css" />
-<script src="https://unpkg.com/blockstack@19.4.0-beta.1/dist/blockstack.js" integrity="sha384-UnkhaTA3XqTl/a79lTWO+C85bbXyM8IIUYtSLfrkkNQJcCxocVZv8nHaMzrvS9ZH" crossorigin="anonymous"></script>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-  
+
 </head>
 <body>
  
-  <div class="container">
-    <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="#">About Us</a>
-      <a href="https://frontend-j59728fja.now.sh/">Sign Up</a>
-      <a href="contactpage.html">Contact</a>
-    </div>
-    <div class="home-container">
-        <header>
-            <h1>Dev-Libs</h1>
-            <h2>Meet Our Team!</h2>
-          </header>
-          <div class="team-container">
-            <p>Project Lead</p>
-            <div class="team1">
-              <div class="team1-content">
-              <img src="https://avatars1.githubusercontent.com/u/15709701?s=96&v=4"></img>
-              <p>James Starks</p>
+    <div class="container">
+        <div class="top-container">
+      <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="team.html">About Us</a>
+        <a href="https://frontend-j59728fja.now.sh/">Sign Up</a>
+        <a href="contactpage.html">Contact</a>
+      </div>
+      <div class="nav-header">
+          <header>
+              <div class="header-text-img-container">
+                  <div class="header-text">
+              <h1>Dev-Libs</h1>
+              <h2>Meet Our Team!</h2>
               </div>
-            </div>
-            <p>UI</p>
-            <div class="team2">
-
-              <div class="team2-content">
-                <img src="https://avatars1.githubusercontent.com/u/781758?s=400&u=287aa55c10dce9269c0ee37917a972a45cc91f9c&v=4"></img>
-                <p>Ryan Smith</p>
+              <div class="header-img">
+              <img src="img/logo.png"></img>
               </div>
-            <div class="team2-content">
-                <img src="https://ca.slack-edge.com/T4JUEB3ME-UNJSPUQP7-9b2e6d103fdc-512"></img>
-                <p>Tommy Conner</p>
               </div>
-            </div>
-            <p>Front End</p>
-            <div class="team3">
-              <div class="team3-content">
-                <img src="https://avatars1.githubusercontent.com/u/12983803?s=96&v=4"></img>
-                <p>Raul Oritz</p>
-              </div>
-              <div class="team3-content">
-                <img src="https://avatars3.githubusercontent.com/u/48539946?s=96&v=4"></img>
-                <p>Kevin Grant</p>
-              </div>
-              <div class="team3-content">
-                <img src="https://avatars0.githubusercontent.com/u/45987205?s=96&v=4"></img>
-                <p>Kasit Nganthavee</p>
-              </div>
+            </header>
             </div>
           </div>
-       
+    <div class="home-container">
+      <div class="logo-container">
+        <div class="logo">
+          <img src="img/logo.png"></img>
+        </div>
+      </div>
+          <div class="team-container">
+            <!-- <p>Project Lead</p> -->
+
+              <div class="team-content">
+              <img src="https://avatars1.githubusercontent.com/u/15709701?s=96&v=4"></img>
+              <p>James Starks<br><br>
+              Project Lead</p>
+              </div>
+
+            <!-- <p>UI</p> -->
+
+
+              <div class="team-content">
+                <img src="https://avatars1.githubusercontent.com/u/781758?s=400&u=287aa55c10dce9269c0ee37917a972a45cc91f9c&v=4"></img>
+                <p>Ryan Smith<br><br>
+                UI</p>
+              </div>
+            <div class="team-content">
+                <img src="https://ca.slack-edge.com/T4JUEB3ME-UNJSPUQP7-9b2e6d103fdc-512"></img>
+                <p>Tommy Conner<br><br>
+                UI</p>
+              </div>
+
+            <!-- <p>Front End</p> -->
+
+              <div class="team-content">
+                <img src="https://avatars1.githubusercontent.com/u/12983803?s=96&v=4"></img>
+                <p>Raul Oritz<br><br>
+                Front End</p>
+              </div>
+              <div class="team-content">
+                <img src="https://avatars3.githubusercontent.com/u/48539946?s=96&v=4"></img>
+                <p>Kevin Grant<br><br>
+                  Front End</p>
+              </div>
+              <div class="team-content">
+                <img src="https://avatars0.githubusercontent.com/u/45987205?s=96&v=4"></img>
+                <p>Kasit Nganthavee<br><br>
+                  Front End</p>
+              </div>
+            </div>
+
+        </div>
+
         <footer>
-            <p>Dev-Libs 2019</p>
+            <p>&copy; Dev-Libs 2019</p>
 
           </footer>
-        </div>
 
       </body>
 
