--- a/contactpage.html
+++ b/contactpage.html
@@ -43,16 +43,16 @@
                   <h2>Contact Us</h2>
                   
                   <fieldset>
-                    <input placeholder="Your Name" type="text" tabindex="1" required autofocus>
+                    <input placeholder="Name" type="text" tabindex="1" required autofocus>
                   </fieldset>
                   <fieldset>
-                    <input placeholder="Your Email Address" type="email" tabindex="2" required>
+                    <input placeholder="Email Address" type="email" tabindex="2" required>
                   </fieldset>
                   <fieldset>
-                    <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+                    <input placeholder="Phone Number (optional)" type="tel" tabindex="3" optional>
                   </fieldset>
                   <fieldset>
-                    <input placeholder="Your Web Site" type="url" tabindex="4" required>
+                    <input placeholder="Web Site (optional)" type="url" tabindex="4" optional>
                   </fieldset>
                   <fieldset>
                     <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
