--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="header-text-img-container">
                 <div class="header-text">
             <h1>Dev-Libs</h1>
-            <!-- <h2>Introducing the app to keep your brain stimulated!</h2> -->
+            <h2>Madlibs for Developers!</h2>
             </div>
             <div class="header-img">
             <img src="img/logo.png"></img>
