MVP all done , changed some text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="home">
         <p>
-           Are you stressed out and need a break from work? Try out Dev-Libs, our MadLibs app for developers!
+          Introducing Dev-Libs! Our brand new MadLibs app for developers!
         </p>
     </div>
         </div>
@@ -52,7 +52,7 @@
 
     <div class="home">
         <p>
-          Looking for something to pass the time or on your lunch break and want something mentally stimulating?
+          Whether you're looking to blow off steam on your break at work or just want something to keep your mind active, Dev-Libs is a fun option!
         </p>
     </div>
         </div>
@@ -62,7 +62,7 @@
     </div>
     <div class="home">
         <p>
-           Sign up to start playing!!
+           Sign up now to start playing!!
             <br><br>
             <button class="play"><a href="https://frontend-j59728fja.now.sh/">Play Dev-Libs</a></button></p><br>
      
